kubernetes/apps/jackett/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett-ingress
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-dns
    traefik.ingress.kubernetes.io/service.serversscheme: http
    traefik.ingress.kubernetes.io/entrypoints: websecure
  labels:
    app: jackett
spec:
  rules:
    - host: jackett.sargeant.co # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jackett
                port:
                  number: 9117
  tls:
    - hosts:
        - jackett.sargeant.co # Replace with your domain
      secretName: jackett-tls # Secret for TLS certificate
